# S48_HTTP-HTTPS-SSL-Plain-Socket-Library

./: .gitignore  Makefile.in  README.md  configure.in
c/: ssl48.c  ssl48.h
docs/: FromTheoryToImplHTTP_F_S48.tex
scheme/: ssl48.scm
